--- a/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.html
+++ b/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.html
@@ -1,9 +1,11 @@
 <button
 	class="toggle_button"
-	(click)="toggleMobileSidebar(true)">
+	(click)="toggleMobileSidebar(true)"
+>
 	<app-icon
 		icon="menu"
-		[size]="26"></app-icon>
+		[size]="26"
+	></app-icon>
 </button>
 
 <ng-container *ngIf="open">
