--- a/frontend/src/app/notes/components/dialogs/create-note-dialog/create-note-dialog.component.html
+++ b/frontend/src/app/notes/components/dialogs/create-note-dialog/create-note-dialog.component.html
@@ -1,17 +1,20 @@
 <h1
 	mat-dialog-title
-	class="create-note__title">
+	class="create-note__title"
+>
 	Create a note
 </h1>
 <section mat-dialog-content>
 	<form
 		[formGroup]="form"
-		class="create-note__form">
+		class="create-note__form"
+	>
 		<mat-form-field appearance="outline">
 			<mat-label>Title</mat-label>
 			<input
 				matInput
-				formControlName="title" />
+				formControlName="title"
+			/>
 		</mat-form-field>
 	</form>
 </section>
@@ -19,7 +22,8 @@
 <mat-dialog-actions align="end">
 	<button
 		mat-stroked-button
-		(click)="onBackClick()">
+		(click)="onBackClick()"
+	>
 		Back
 	</button>
 	<button
@@ -27,7 +31,8 @@
 		color="primary"
 		[disabled]="form.invalid"
 		type="submit"
-		(click)="onSubmitClick()">
+		(click)="onSubmitClick()"
+	>
 		Create
 	</button>
 </mat-dialog-actions>
