--- a/frontend/src/app/notes/pages/notes/notes.component.html
+++ b/frontend/src/app/notes/pages/notes/notes.component.html
@@ -2,18 +2,21 @@
 
 <div class="notes-wrapper desktop">
 	<app-notes-sidebar
-		(selectedNoteId)="onSelectNote($event)"></app-notes-sidebar>
+		(selectedNoteId)="onSelectNote($event)"
+	></app-notes-sidebar>
 
 	<main class="notes__content">
 		<form
 			[formGroup]="form"
-			*ngIf="selectedNote; else emptyNote">
+			*ngIf="selectedNote; else emptyNote"
+		>
 			<quill-editor
 				formControlName="content"
 				theme="snow"
 				[modules]="quillConfig"
 				class="quill__editor"
-				placeholder=""></quill-editor>
+				placeholder=""
+			></quill-editor>
 		</form>
 	</main>
 </div>
