--- a/frontend/src/app/overview/pages/overview-home/overview-home.component.html
+++ b/frontend/src/app/overview/pages/overview-home/overview-home.component.html
@@ -50,7 +50,8 @@
 				<div class="overview__performance-wrapper">
 					<mat-progress-spinner
 						diameter="150"
-						[value]="80"></mat-progress-spinner>
+						[value]="80"
+					></mat-progress-spinner>
 					<span class="overview__performance-label">
 						<p class="overview__performance-label-number">80%</p>
 					</span>
@@ -78,13 +79,16 @@
 					<div class="overview__teams-avatars">
 						<img
 							alt="Avatar 1"
-							class="overview__teams-avatar" />
+							class="overview__teams-avatar"
+						/>
 						<img
 							alt="Avatar 2"
-							class="overview__teams-avatar" />
+							class="overview__teams-avatar"
+						/>
 						<img
 							alt="Avatar 3"
-							class="overview__teams-avatar" />
+							class="overview__teams-avatar"
+						/>
 
 						<div class="overview__teams-avatar more">+3</div>
 					</div>
@@ -95,13 +99,16 @@
 					<div class="overview__teams-avatars">
 						<img
 							alt="Avatar 1"
-							class="overview__teams-avatar" />
+							class="overview__teams-avatar"
+						/>
 						<img
 							alt="Avatar 2"
-							class="overview__teams-avatar" />
+							class="overview__teams-avatar"
+						/>
 						<img
 							alt="Avatar 3"
-							class="overview__teams-avatar" />
+							class="overview__teams-avatar"
+						/>
 
 						<div class="overview__teams-avatar more">+3</div>
 					</div>
