--- a/frontend/src/app/teams/submodules/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/frontend/src/app/teams/submodules/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.html
@@ -4,7 +4,8 @@
 		<div class="dashboard__sidebar-performance">
 			<mat-progress-spinner
 				diameter="150"
-				[value]="80"></mat-progress-spinner>
+				[value]="80"
+			></mat-progress-spinner>
 			<span class="dashboard__sidebar-performance-label">
 				<p class="dashboard__sidebar-performance-label-tag">Overall</p>
 				<p class="dashboard__sidebar-performance-label-number">80%</p>
@@ -17,28 +18,32 @@
 		<div class="dashboard__sidebar-tasks">
 			<div
 				class="dashboard__sidebar-tasks-item"
-				[ngStyle]="{ background: '#E6EDFD' }">
+				[ngStyle]="{ background: '#E6EDFD' }"
+			>
 				<p class="dashboard__sidebar-tasks-item-label">Total</p>
 				<p class="dashboard__sidebar-tasks-item-body">148</p>
 			</div>
 
 			<div
 				class="dashboard__sidebar-tasks-item"
-				[ngStyle]="{ background: '#E9F8F7' }">
+				[ngStyle]="{ background: '#E9F8F7' }"
+			>
 				<p class="dashboard__sidebar-tasks-item-label">Completed</p>
 				<p class="dashboard__sidebar-tasks-item-body">56</p>
 			</div>
 
 			<div
 				class="dashboard__sidebar-tasks-item"
-				[ngStyle]="{ background: '#FFF3E5' }">
+				[ngStyle]="{ background: '#FFF3E5' }"
+			>
 				<p class="dashboard__sidebar-tasks-item-label">In Progress</p>
 				<p class="dashboard__sidebar-tasks-item-body">74</p>
 			</div>
 
 			<div
 				class="dashboard__sidebar-tasks-item"
-				[ngStyle]="{ background: '#FFEAED' }">
+				[ngStyle]="{ background: '#FFEAED' }"
+			>
 				<p class="dashboard__sidebar-tasks-item-label">Backlog</p>
 				<p class="dashboard__sidebar-tasks-item-body">16</p>
 			</div>
