--- a/frontend/src/app/teams/submodules/files/components/files-filter/files-filter.component.html
+++ b/frontend/src/app/teams/submodules/files/components/files-filter/files-filter.component.html
@@ -6,14 +6,16 @@
 			</mat-expansion-panel-header>
 			<form
 				[formGroup]="form"
-				class="filter__fields">
+				class="filter__fields"
+			>
 				<mat-form-field appearance="outline">
 					<mat-label>Search</mat-label>
 					<input
 						matInput
 						formControlName="searchValue"
 						type="text"
-						placeholder="Filename" />
+						placeholder="Filename"
+					/>
 				</mat-form-field>
 
 				<mat-form-field appearance="outline">
@@ -22,7 +24,8 @@
 						<mat-option
 							*ngFor="let view of views"
 							[matTooltip]="view.name"
-							[value]="view.id">
+							[value]="view.id"
+						>
 							{{ view.name }}
 						</mat-option>
 					</mat-select>
@@ -34,7 +37,8 @@
 						<mat-option
 							*ngFor="let sort of sorting"
 							[matTooltip]="sort.name"
-							[value]="sort.id">
+							[value]="sort.id"
+						>
 							{{ sort.name }}
 						</mat-option>
 					</mat-select>
