--- a/frontend/src/app/teams/submodules/files/components/views/files-list-view/files-list-view.component.html
+++ b/frontend/src/app/teams/submodules/files/components/views/files-list-view/files-list-view.component.html
@@ -1,5 +1,6 @@
 <div class="files__list">
 	<app-files-list-item
 		*ngFor="let file of files"
-		[file]="file"></app-files-list-item>
+		[file]="file"
+	></app-files-list-item>
 </div>
