--- a/frontend/src/app/teams/submodules/meetings/components/meetings-toolbar/meetings-toolbar.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/meetings-toolbar/meetings-toolbar.component.html
@@ -7,14 +7,16 @@
 		<app-button
 			variant="outline"
 			class="meetings__toolbar-item"
-			icon="share">
+			icon="share"
+		>
 			<p>Share</p>
 		</app-button>
 
 		<app-button
 			class="meetings__toolbar-item"
 			icon="add"
-			(click)="onCreateButtonClick($event)">
+			(click)="onCreateButtonClick($event)"
+		>
 			<p>Add</p>
 		</app-button>
 	</div>
