--- a/frontend/src/app/teams/submodules/posts/pages/posts/posts.component.html
+++ b/frontend/src/app/teams/submodules/posts/pages/posts/posts.component.html
@@ -12,7 +12,8 @@
 				<app-paginator
 					*ngIf="posts.length > 0"
 					(page)="onPage($event)"
-					[pagination]="pagination">
+					[pagination]="pagination"
+				>
 				</app-paginator>
 			</ng-container>
 		</div>
