--- a/frontend/src/app/teams/submodules/tasks/components/dialogs/create-task-dialog/create-task-dialog.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/dialogs/create-task-dialog/create-task-dialog.component.html
@@ -1,21 +1,25 @@
 <h4
 	mat-dialog-title
-	class="ctask__title">
+	class="ctask__title"
+>
 	Create new Task
 </h4>
 
 <section
 	class="ctask"
-	mat-dialog-content>
+	mat-dialog-content
+>
 	<form
 		[formGroup]="form"
-		class="ctask__form">
+		class="ctask__form"
+	>
 		<mat-form-field appearance="outline">
 			<mat-label>Title</mat-label>
 			<input
 				formControlName="title"
 				matInput
-				placeholder="Enter a title" />
+				placeholder="Enter a title"
+			/>
 		</mat-form-field>
 
 		<mat-form-field appearance="outline">
@@ -26,7 +30,8 @@
 				cdkAutosizeMaxRows="5"
 				formControlName="description"
 				matInput
-				placeholder="Write out small description"></textarea>
+				placeholder="Write out small description"
+			></textarea>
 		</mat-form-field>
 
 		<quill-editor
@@ -34,7 +39,8 @@
 			formControlName="content"
 			theme="snow"
 			placeholder="Main body (eg. steps, specifications and etc.)"
-			class="quill__editor"></quill-editor>
+			class="quill__editor"
+		></quill-editor>
 
 		<div class="row">
 			<mat-form-field appearance="outline">
@@ -44,7 +50,8 @@
 						<mat-option
 							*ngFor="let status of statuses"
 							[matTooltip]="status.name"
-							[value]="status.id">
+							[value]="status.id"
+						>
 							{{ status.name }}
 						</mat-option>
 					</ng-container>
@@ -56,7 +63,8 @@
 				<input
 					formControlName="tag"
 					matInput
-					placeholder="Specify tag for task (eg. Development, Testing and etc.)" />
+					placeholder="Specify tag for task (eg. Development, Testing and etc.)"
+				/>
 			</mat-form-field>
 		</div>
 
@@ -76,14 +84,16 @@
 				<mat-select formControlName="executorId">
 					<mat-option
 						matTooltip="Unassgined"
-						[value]="null">
+						[value]="null"
+					>
 						Unassgined
 					</mat-option>
 					<ng-container *ngIf="executors$ | async as executors">
 						<mat-option
 							*ngFor="let executor of executors"
 							[matTooltip]="executor.fullName"
-							[value]="executor.id">
+							[value]="executor.id"
+						>
 							{{ executor.fullName }}
 						</mat-option>
 					</ng-container>
@@ -97,10 +107,12 @@
 				<input
 					matInput
 					formControlName="startDate"
-					[matDatepicker]="startDeadlinePicker" />
+					[matDatepicker]="startDeadlinePicker"
+				/>
 				<mat-datepicker-toggle
 					matIconSuffix
-					[for]="startDeadlinePicker"></mat-datepicker-toggle>
+					[for]="startDeadlinePicker"
+				></mat-datepicker-toggle>
 				<mat-datepicker #startDeadlinePicker></mat-datepicker>
 			</mat-form-field>
 
@@ -109,10 +121,12 @@
 				<input
 					matInput
 					formControlName="endDate"
-					[matDatepicker]="endDeadlinePicker" />
+					[matDatepicker]="endDeadlinePicker"
+				/>
 				<mat-datepicker-toggle
 					matIconSuffix
-					[for]="endDeadlinePicker"></mat-datepicker-toggle>
+					[for]="endDeadlinePicker"
+				></mat-datepicker-toggle>
 				<mat-datepicker #endDeadlinePicker></mat-datepicker>
 			</mat-form-field>
 		</div>
@@ -122,7 +136,8 @@
 <mat-dialog-actions align="end">
 	<button
 		mat-stroked-button
-		(click)="onBackClick()">
+		(click)="onBackClick()"
+	>
 		Back
 	</button>
 	<button
@@ -130,7 +145,8 @@
 		mat-flat-button
 		color="primary"
 		[disabled]="form.invalid"
-		(click)="onSubmit()">
+		(click)="onSubmit()"
+	>
 		Create
 	</button>
 </mat-dialog-actions>
