--- a/frontend/src/app/teams/submodules/tasks/components/views/list-view/components/list-panel/list-panel.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/views/list-view/components/list-panel/list-panel.component.html
@@ -1,12 +1,14 @@
 <ng-container *ngIf="column">
 	<mat-expansion-panel
 		(opened)="panelOpenState = true"
-		(closed)="panelOpenState = false">
+		(closed)="panelOpenState = false"
+	>
 		<mat-expansion-panel-header>
 			<mat-panel-title>
 				<span
 					class="panel__color"
-					[ngStyle]="{ 'background-color': column.color }"></span>
+					[ngStyle]="{ 'background-color': column.color }"
+				></span>
 				{{ column.name }}
 			</mat-panel-title>
 		</mat-expansion-panel-header>
@@ -14,18 +16,21 @@
 		<div class="table_wrapper">
 			<table
 				mat-table
-				[dataSource]="column.tasks">
+				[dataSource]="column.tasks"
+			>
 				<caption></caption>
 
 				<ng-container matColumnDef="id">
 					<th
 						mat-header-cell
-						*matHeaderCellDef>
+						*matHeaderCellDef
+					>
 						#
 					</th>
 					<td
 						mat-cell
-						*matCellDef="let element">
+						*matCellDef="let element"
+					>
 						{{ element.id }}
 					</td>
 				</ng-container>
@@ -33,12 +38,14 @@
 				<ng-container matColumnDef="title">
 					<th
 						mat-header-cell
-						*matHeaderCellDef>
+						*matHeaderCellDef
+					>
 						Name
 					</th>
 					<td
 						mat-cell
-						*matCellDef="let element">
+						*matCellDef="let element"
+					>
 						{{ element.title }}
 					</td>
 				</ng-container>
@@ -46,12 +53,14 @@
 				<ng-container matColumnDef="executor">
 					<th
 						mat-header-cell
-						*matHeaderCellDef>
+						*matHeaderCellDef
+					>
 						Executor
 					</th>
 					<td
 						mat-cell
-						*matCellDef="let element">
+						*matCellDef="let element"
+					>
 						{{ element.executorMember?.fullName ?? 'Unassigned' }}
 					</td>
 				</ng-container>
@@ -59,12 +68,14 @@
 				<ng-container matColumnDef="startDate">
 					<th
 						mat-header-cell
-						*matHeaderCellDef>
+						*matHeaderCellDef
+					>
 						Start Date
 					</th>
 					<td
 						mat-cell
-						*matCellDef="let element">
+						*matCellDef="let element"
+					>
 						{{ element.startDate | date: 'EEEE, MMMM d' }}
 					</td>
 				</ng-container>
@@ -72,12 +83,14 @@
 				<ng-container matColumnDef="endDate">
 					<th
 						mat-header-cell
-						*matHeaderCellDef>
+						*matHeaderCellDef
+					>
 						Due Date
 					</th>
 					<td
 						mat-cell
-						*matCellDef="let element">
+						*matCellDef="let element"
+					>
 						<ng-container *ngIf="element.endDate; else emptyEndDate">
 							{{ element.endDate | date: 'EEEE, MMMM d' }}
 						</ng-container>
@@ -89,12 +102,14 @@
 				<ng-container matColumnDef="priority">
 					<th
 						mat-header-cell
-						*matHeaderCellDef>
+						*matHeaderCellDef
+					>
 						Priority
 					</th>
 					<td
 						mat-cell
-						*matCellDef="let element">
+						*matCellDef="let element"
+					>
 						{{ taskPriority(element) }}
 					</td>
 				</ng-container>
@@ -102,21 +117,25 @@
 				<ng-container matColumnDef="actions">
 					<th
 						mat-header-cell
-						*matHeaderCellDef></th>
+						*matHeaderCellDef
+					></th>
 					<td
 						mat-cell
-						*matCellDef="let element">
+						*matCellDef="let element"
+					>
 						<app-task-more-menu [task]="element"></app-task-more-menu>
 					</td>
 				</ng-container>
 
 				<tr
 					mat-header-row
-					*matHeaderRowDef="displayedColumns"></tr>
+					*matHeaderRowDef="displayedColumns"
+				></tr>
 				<tr
 					mat-row
 					*matRowDef="let row; columns: displayedColumns"
-					[routerLink]="[row.id]"></tr>
+					[routerLink]="[row.id]"
+				></tr>
 			</table>
 		</div>
 	</mat-expansion-panel>
