--- a/frontend/src/app/auth/pages/login/login.component.html
+++ b/frontend/src/app/auth/pages/login/login.component.html
@@ -4,7 +4,8 @@
 			class="login__hero"
 			src="https://images.unsplash.com/photo-1552083940-86877723de7a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
 			alt="Login"
-			loading="eager" />
+			loading="eager"
+		/>
 
 		<div class="login__banner">
 			<h3>KAITEKI</h3>
@@ -28,7 +29,8 @@
 					matInput
 					formControlName="emailOrUsername"
 					type="text"
-					placeholder="Enter either email or username" />
+					placeholder="Enter either email or username"
+				/>
 			</mat-form-field>
 
 			<mat-form-field appearance="outline">
@@ -37,7 +39,8 @@
 					matInput
 					formControlName="password"
 					type="password"
-					placeholder="Password" />
+					placeholder="Password"
+				/>
 			</mat-form-field>
 
 			<a class="login__forgot">Forgot Password?</a>
@@ -48,7 +51,8 @@
 				color="primary"
 				class="login__button"
 				[disabled]="form.invalid"
-				(click)="onSubmit()">
+				(click)="onSubmit()"
+			>
 				Login
 			</button>
 		</form>
@@ -62,7 +66,8 @@
 			class="login__back"
 			routerLink="../"
 			matTooltip="Back"
-			matTooltipPosition="right">
+			matTooltipPosition="right"
+		>
 			<mat-icon>arrow_back_ios</mat-icon>
 		</button>
 	</div>
