--- a/frontend/src/app/events/components/views/events-month-view/events-month-view.component.html
+++ b/frontend/src/app/events/components/views/events-month-view/events-month-view.component.html
@@ -3,6 +3,7 @@
 		[viewDate]="viewDate"
 		[events]="displayEvents"
 		[refresh]="refresh"
-		(eventClicked)="onSelectEvent($event.event)">
+		(eventClicked)="onSelectEvent($event.event)"
+	>
 	</mwl-calendar-month-view>
 </div>
