--- a/frontend/src/app/integrations/submodules/spotify/pages/spotify-dashboard/spotify-dashboard.component.html
+++ b/frontend/src/app/integrations/submodules/spotify/pages/spotify-dashboard/spotify-dashboard.component.html
@@ -7,9 +7,11 @@
 
 			<div class="spotify-playlists__list">
 				<ng-container
-					*ngFor="let playlist of savedPlaylists$ | async as savedPlaylists">
+					*ngFor="let playlist of savedPlaylists$ | async as savedPlaylists"
+				>
 					<app-dashboard-playlist-item
-						[playlist]="playlist"></app-dashboard-playlist-item>
+						[playlist]="playlist"
+					></app-dashboard-playlist-item>
 				</ng-container>
 			</div>
 		</div>
@@ -19,9 +21,11 @@
 
 			<div class="spotify-playlists__list">
 				<ng-container
-					*ngFor="let playlist of chillPlaylists$ | async as chillPlaylists">
+					*ngFor="let playlist of chillPlaylists$ | async as chillPlaylists"
+				>
 					<app-dashboard-playlist-item
-						[playlist]="playlist"></app-dashboard-playlist-item>
+						[playlist]="playlist"
+					></app-dashboard-playlist-item>
 				</ng-container>
 			</div>
 		</div>
@@ -33,9 +37,11 @@
 				<ng-container
 					*ngFor="
 						let playlist of trendingPlaylists$ | async as trendingPlaylist
-					">
+					"
+				>
 					<app-dashboard-playlist-item
-						[playlist]="playlist"></app-dashboard-playlist-item>
+						[playlist]="playlist"
+					></app-dashboard-playlist-item>
 				</ng-container>
 			</div>
 		</div>
