--- a/frontend/src/app/landing/components/navbar/navbar.component.html
+++ b/frontend/src/app/landing/components/navbar/navbar.component.html
@@ -9,21 +9,24 @@
 				*ngFor="let page of navbarPagesArr"
 				[routerLink]="[page.link]"
 				routerLinkActive="router-link-active"
-				class="nav__link">
+				class="nav__link"
+			>
 				{{ page.label }}
 			</a>
 		</ul>
 
 		<div
 			class="nav__mobile"
-			*ngIf="menuOpen">
+			*ngIf="menuOpen"
+		>
 			<ul class="nav__mobile-wrapper">
 				<a
 					*ngFor="let page of navbarPagesArr"
 					[routerLink]="[page.link]"
 					routerLinkActive="router-link-active"
 					class="nav__mobile-link"
-					[ngClass]="{ 'nav__mobile-link-active': false }">
+					[ngClass]="{ 'nav__mobile-link-active': false }"
+				>
 					{{ page.label }}
 				</a>
 
@@ -31,7 +34,8 @@
 					[routerLink]="[navbarPages['sales'].link]"
 					routerLinkActive="router-link-active"
 					class="nav__mobile-link"
-					[ngClass]="{ 'nav__mobile-link-active': false }">
+					[ngClass]="{ 'nav__mobile-link-active': false }"
+				>
 					{{ navbarPages['sales'].label }}
 				</a>
 			</ul>
@@ -41,7 +45,8 @@
 			<a
 				[routerLink]="[navbarPages['sales'].link]"
 				routerLinkActive="router-link-active"
-				class="nav__right-link">
+				class="nav__right-link"
+			>
 				{{ navbarPages['sales'].label }}
 			</a>
 
@@ -51,7 +56,8 @@
 						<img
 							src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
 							alt="Avatar"
-							class="avatar-img" />
+							class="avatar-img"
+						/>
 						<p class="avatar-label">
 							{{ user.firstname }} {{ user.lastname.charAt(0) }}.
 						</p>
@@ -60,16 +66,19 @@
 
 				<mat-menu
 					#profileDropdown="matMenu"
-					yPosition="below">
+					yPosition="below"
+				>
 					<button
 						mat-menu-item
-						routerLink="hub">
+						routerLink="hub"
+					>
 						<mat-icon>apps</mat-icon>
 						<p>Enter Hub</p>
 					</button>
 					<button
 						mat-menu-item
-						(click)="onLogout()">
+						(click)="onLogout()"
+					>
 						<mat-icon>logout</mat-icon>
 						<p>Log Out</p>
 					</button>
@@ -80,14 +89,16 @@
 				<button
 					mat-flat-button
 					color="primary"
-					routerLink="login">
+					routerLink="login"
+				>
 					Get started
 				</button>
 			</ng-template>
 
 			<button
 				class="nav__right-menu"
-				(click)="onToggleMenu()">
+				(click)="onToggleMenu()"
+			>
 				<mat-icon
 					*ngIf="!menuOpen"
 					class="nav__icon"
