--- a/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.html
+++ b/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.html
@@ -2,10 +2,12 @@
 	<div class="navbar__left">
 		<button
 			class="navbar__sidebar-toggle"
-			(click)="toggleDesktopSidebar()">
+			(click)="toggleDesktopSidebar()"
+		>
 			<app-icon
 				icon="menu"
-				[size]="26"></app-icon>
+				[size]="26"
+			></app-icon>
 		</button>
 		<app-mobile-sidebar class="navbar__mobile-toggle"></app-mobile-sidebar>
 		<h1 class="navbar__header">{{ header | async }}</h1>
@@ -28,7 +30,8 @@
 			<mat-menu
 				#notificationMenu="matMenu"
 				yPosition="below"
-				class="rounded">
+				class="rounded"
+			>
 				<div class="navbar__notification">
 					<h1 class="navbar__notification-header">Notifications</h1>
 					<ul class="navbar__notification-list">
@@ -46,7 +49,8 @@
 					<img
 						src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
 						alt="Avatar"
-						class="navbar__avatar-img" />
+						class="navbar__avatar-img"
+					/>
 					<p class="navbar__avatar-label">
 						{{ user.firstname }} {{ user.lastname.charAt(0) }}.
 					</p>
@@ -55,10 +59,12 @@
 
 			<mat-menu
 				#profileDropdown="matMenu"
-				yPosition="below">
+				yPosition="below"
+			>
 				<button
 					mat-menu-item
-					(click)="onLogout()">
+					(click)="onLogout()"
+				>
 					<mat-icon>logout</mat-icon>
 					<p>Log Out</p>
 				</button>
