--- a/frontend/src/app/shared/components/paginator/paginator.component.html
+++ b/frontend/src/app/shared/components/paginator/paginator.component.html
@@ -2,5 +2,6 @@
 	[length]="pagination.totalElements"
 	[pageSize]="pagination.size"
 	[pageSizeOptions]="[5, 10, 25, 100]"
-	[pageIndex]="pagination.page">
+	[pageIndex]="pagination.page"
+>
 </mat-paginator>
