--- a/frontend/src/app/teams/components/dialogs/create-team-dialog/create-team-dialog.component.html
+++ b/frontend/src/app/teams/components/dialogs/create-team-dialog/create-team-dialog.component.html
@@ -1,19 +1,22 @@
 <h1
 	mat-dialog-title
-	class="create-team__title">
+	class="create-team__title"
+>
 	Create a new team
 </h1>
 
 <section mat-dialog-content>
 	<form
 		[formGroup]="form"
-		class="create-team__form">
+		class="create-team__form"
+	>
 		<mat-form-field appearance="outline">
 			<mat-label>Team Name</mat-label>
 			<input
 				matInput
 				formControlName="name"
-				placeholder="Give us know how to name your team" />
+				placeholder="Give us know how to name your team"
+			/>
 		</mat-form-field>
 
 		<mat-form-field appearance="outline">
@@ -21,7 +24,8 @@
 			<input
 				matInput
 				formControlName="description"
-				placeholder="Write about your amazing team" />
+				placeholder="Write about your amazing team"
+			/>
 		</mat-form-field>
 	</form>
 </section>
@@ -29,7 +33,8 @@
 <mat-dialog-actions align="end">
 	<button
 		mat-stroked-button
-		(click)="onBackClick()">
+		(click)="onBackClick()"
+	>
 		Back
 	</button>
 	<button
@@ -37,7 +42,8 @@
 		color="primary"
 		[disabled]="form.invalid"
 		type="submit"
-		(click)="onSubmitClick()">
+		(click)="onSubmitClick()"
+	>
 		Create
 	</button>
 </mat-dialog-actions>
