--- a/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.html
+++ b/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.html
@@ -8,13 +8,15 @@
 		<mat-menu #createMenu="matMenu">
 			<button
 				mat-menu-item
-				(click)="onCreateSingleClick()">
+				(click)="onCreateSingleClick()"
+			>
 				<mat-icon>person</mat-icon>
 				<span>Personal chat</span>
 			</button>
 			<button
 				mat-menu-item
-				(click)="onCreateGroupClick()">
+				(click)="onCreateGroupClick()"
+			>
 				<mat-icon>group</mat-icon>
 				<span>Group chat</span>
 			</button>
@@ -23,17 +25,20 @@
 
 	<form
 		[formGroup]="searchForm"
-		class="sidebar__search">
+		class="sidebar__search"
+	>
 		<input
 			placeholder="Search"
 			class="sidebar__search-input"
 			type="text"
-			formControlName="value" />
+			formControlName="value"
+		/>
 	</form>
 
 	<ng-container *ngIf="chats$ | async as chats">
 		<ng-container
-			*ngIf="{ value: (currentChatRoom$ | async) } as currentChatRoomObs">
+			*ngIf="{ value: (currentChatRoom$ | async) } as currentChatRoomObs"
+		>
 			<div class="sidebar__list desktop">
 				<div
 					*ngFor="let chat of chats; trackBy: chatsTrackBy"
@@ -41,24 +46,28 @@
 					[class.sidebar__item-active]="
 						currentChatRoomObs.value?.id === chat.id
 					"
-					(click)="onSelectChat(chat)">
+					(click)="onSelectChat(chat)"
+				>
 					<img
 						class="sidebar__item-icon"
 						[src]="chat.iconId"
-						alt="icon" />
+						alt="icon"
+					/>
 
 					<div class="sidebar__item-details">
 						<div class="sidebar__item-header">
 							<p class="sidebar__item-header-label">{{ chat.name }}</p>
 							<p
 								class="sidebar__item-header-time"
-								*ngIf="chat.lastMessageDate">
+								*ngIf="chat.lastMessageDate"
+							>
 								{{ chat.lastMessageDate | date: 'HH:mm' }}
 							</p>
 						</div>
 						<div
 							class="sidebar__item-body"
-							*ngIf="chat.lastMessageContent">
+							*ngIf="chat.lastMessageContent"
+						>
 							{{ chat.lastMessageContent }}
 						</div>
 					</div>
@@ -72,23 +81,27 @@
 					class="sidebar__item"
 					[class.sidebar__item-active]="
 						currentChatRoomObs.value?.id === chat.id
-					">
+					"
+				>
 					<img
 						class="sidebar__item-icon"
 						[src]="chat.iconId"
-						alt="icon" />
+						alt="icon"
+					/>
 					<div class="sidebar__item-details">
 						<div class="sidebar__item-header">
 							<p class="sidebar__item-header-label">{{ chat.name }}</p>
 							<p
 								class="sidebar__item-header-time"
-								*ngIf="chat.lastMessageDate">
+								*ngIf="chat.lastMessageDate"
+							>
 								{{ chat.lastMessageDate | date: 'HH:mm' }}
 							</p>
 						</div>
 						<div
 							class="sidebar__item-body"
-							*ngIf="chat.lastMessageContent">
+							*ngIf="chat.lastMessageContent"
+						>
 							{{ chat.lastMessageContent }}
 						</div>
 					</div>
