--- a/frontend/src/app/teams/submodules/chats/components/dialogs/create-group-dialog/create-group-dialog.component.html
+++ b/frontend/src/app/teams/submodules/chats/components/dialogs/create-group-dialog/create-group-dialog.component.html
@@ -1,24 +1,28 @@
 <h1
 	mat-dialog-title
-	class="create-chat__title">
+	class="create-chat__title"
+>
 	Create a new group chat
 </h1>
 <section mat-dialog-content>
 	<form
 		[formGroup]="form"
-		class="create-chat__form">
+		class="create-chat__form"
+	>
 		<mat-form-field appearance="outline">
 			<mat-label>Group Name</mat-label>
 			<input
 				matInput
-				formControlName="name" />
+				formControlName="name"
+			/>
 		</mat-form-field>
 
 		<mat-form-field appearance="outline">
 			<mat-label>Members</mat-label>
 			<mat-select
 				formControlName="teamMembersIds"
-				multiple>
+				multiple
+			>
 				<ng-container *ngFor="let member of members$ | async">
 					<mat-option [value]="member.id">{{ member.fullName }}</mat-option>
 				</ng-container>
@@ -30,7 +34,8 @@
 <mat-dialog-actions align="end">
 	<button
 		mat-stroked-button
-		(click)="onBackClick()">
+		(click)="onBackClick()"
+	>
 		Back
 	</button>
 	<button
@@ -38,7 +43,8 @@
 		color="primary"
 		[disabled]="form.invalid"
 		(click)="onSubmitClick()"
-		cdkFocusInitial>
+		cdkFocusInitial
+	>
 		Create
 	</button>
 </mat-dialog-actions>
