--- a/frontend/src/app/teams/submodules/chats/components/dialogs/create-single-dialog/create-single-dialog.component.html
+++ b/frontend/src/app/teams/submodules/chats/components/dialogs/create-single-dialog/create-single-dialog.component.html
@@ -1,12 +1,14 @@
 <h1
 	mat-dialog-title
-	class="create-chat__title">
+	class="create-chat__title"
+>
 	Create a new single chat
 </h1>
 <section mat-dialog-content>
 	<form
 		[formGroup]="form"
-		class="create-chat__form">
+		class="create-chat__form"
+	>
 		<mat-form-field appearance="outline">
 			<mat-label>Members</mat-label>
 			<mat-select formControlName="teamMemberId">
@@ -23,7 +25,8 @@
 <mat-dialog-actions align="end">
 	<button
 		mat-stroked-button
-		(click)="onBackClick()">
+		(click)="onBackClick()"
+	>
 		Back
 	</button>
 	<button
@@ -31,7 +34,8 @@
 		color="primary"
 		[disabled]="form.invalid"
 		(click)="onSubmitClick()"
-		cdkFocusInitial>
+		cdkFocusInitial
+	>
 		Create
 	</button>
 </mat-dialog-actions>
