--- a/frontend/src/app/teams/submodules/dashboard/components/dashboard-filter/dashboard-filter.component.html
+++ b/frontend/src/app/teams/submodules/dashboard/components/dashboard-filter/dashboard-filter.component.html
@@ -6,14 +6,16 @@
 			</mat-expansion-panel-header>
 			<form
 				[formGroup]="form"
-				class="filter__fields">
+				class="filter__fields"
+			>
 				<mat-form-field appearance="outline">
 					<mat-label>Search</mat-label>
 					<mat-icon matPrefix>search</mat-icon>
 					<input
 						matInput
 						type="text"
-						formControlName="searchValue" />
+						formControlName="searchValue"
+					/>
 				</mat-form-field>
 
 				<mat-form-field appearance="outline">
@@ -22,7 +24,8 @@
 						<mat-option
 							*ngFor="let view of views"
 							[matTooltip]="view"
-							[value]="view">
+							[value]="view"
+						>
 							{{ view }}
 						</mat-option>
 					</mat-select>
