--- a/frontend/src/app/teams/submodules/dashboard/components/dashboard-toolbar/dashboard-toolbar.component.html
+++ b/frontend/src/app/teams/submodules/dashboard/components/dashboard-toolbar/dashboard-toolbar.component.html
@@ -7,7 +7,8 @@
 		<app-button
 			class="dashboard__toolbar-item"
 			(click)="onAddNewClick($event)"
-			icon="add">
+			icon="add"
+		>
 			<p>Invite</p>
 		</app-button>
 	</div>
