--- a/frontend/src/app/teams/submodules/files/components/dialogs/upload-file-dialog/upload-file-dialog.component.html
+++ b/frontend/src/app/teams/submodules/files/components/dialogs/upload-file-dialog/upload-file-dialog.component.html
@@ -1,15 +1,18 @@
 <h4
 	mat-dialog-title
-	class="upload-file__title">
+	class="upload-file__title"
+>
 	Upload File
 </h4>
 
 <section
 	class="upload-file"
-	mat-dialog-content>
+	mat-dialog-content
+>
 	<form
 		[formGroup]="form"
-		class="upload-file__form">
+		class="upload-file__form"
+	>
 		<mat-form-field appearance="outline">
 			<mat-label>Description</mat-label>
 			<textarea
@@ -17,20 +20,23 @@
 				formControlName="description"
 				placeholder="Enter File Description"
 				cdkTextareaAutosize
-				cdkAutosizeMinRows="1"></textarea>
+				cdkAutosizeMinRows="1"
+			></textarea>
 		</mat-form-field>
 
 		<file-upload
 			formControlName="files"
 			[multiple]="false"
-			fileslimit="1"></file-upload>
+			fileslimit="1"
+		></file-upload>
 	</form>
 </section>
 
 <mat-dialog-actions align="end">
 	<button
 		mat-stroked-button
-		(click)="onBackClick()">
+		(click)="onBackClick()"
+	>
 		Back
 	</button>
 	<button
@@ -38,7 +44,8 @@
 		mat-flat-button
 		color="primary"
 		[disabled]="form.invalid"
-		(click)="onSubmit()">
+		(click)="onSubmit()"
+	>
 		Upload
 	</button>
 </mat-dialog-actions>
