--- a/frontend/src/app/teams/submodules/meetings/components/dialogs/create-meeting-dialog/create-meeting-dialog.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/dialogs/create-meeting-dialog/create-meeting-dialog.component.html
@@ -1,20 +1,24 @@
 <h4
 	mat-dialog-title
-	class="ctask__title">
+	class="ctask__title"
+>
 	Create new meeting
 </h4>
 
 <section
 	class="ctask"
-	mat-dialog-content>
+	mat-dialog-content
+>
 	<form
 		[formGroup]="form"
-		class="ctask__form">
+		class="ctask__form"
+	>
 		<mat-form-field appearance="outline">
 			<mat-label>Title</mat-label>
 			<input
 				formControlName="title"
-				matInput />
+				matInput
+			/>
 		</mat-form-field>
 
 		<mat-form-field appearance="outline">
@@ -24,14 +28,16 @@
 				matInput
 				cdkTextareaAutosize
 				#autosize="cdkTextareaAutosize"
-				cdkAutosizeMinRows="8"></textarea>
+				cdkAutosizeMinRows="8"
+			></textarea>
 		</mat-form-field>
 
 		<mat-form-field appearance="outline">
 			<mat-label>Particapants</mat-label>
 			<mat-select
 				formControlName="invitedMemberIds"
-				multiple>
+				multiple
+			>
 				<ng-container *ngIf="allTeamMembers$ | async as allTeamMembers">
 					<ng-container *ngFor="let teamMember of allTeamMembers">
 						<mat-option [value]="teamMember.id">
@@ -54,15 +60,18 @@
 					[twelvehour]="false"
 					[timeInterval]="5"
 					[touchUi]="false"
-					[timeInput]="false"></mtx-datetimepicker>
+					[timeInput]="false"
+				></mtx-datetimepicker>
 				<input
 					[mtxDatetimepicker]="startDatetimePicker"
 					formControlName="startDate"
 					matInput
-					required />
+					required
+				/>
 				<mtx-datetimepicker-toggle
 					[for]="startDatetimePicker"
-					matSuffix></mtx-datetimepicker-toggle>
+					matSuffix
+				></mtx-datetimepicker-toggle>
 			</mat-form-field>
 
 			<mat-form-field appearance="outline">
@@ -76,15 +85,18 @@
 					[twelvehour]="false"
 					[timeInterval]="5"
 					[touchUi]="false"
-					[timeInput]="false"></mtx-datetimepicker>
+					[timeInput]="false"
+				></mtx-datetimepicker>
 				<input
 					[mtxDatetimepicker]="endDatetimePicker"
 					formControlName="endDate"
 					matInput
-					required />
+					required
+				/>
 				<mtx-datetimepicker-toggle
 					[for]="endDatetimePicker"
-					matSuffix></mtx-datetimepicker-toggle>
+					matSuffix
+				></mtx-datetimepicker-toggle>
 			</mat-form-field>
 		</div>
 
@@ -98,10 +110,12 @@
 
 <mat-dialog-actions
 	mat-dialog-actions
-	align="end">
+	align="end"
+>
 	<button
 		mat-stroked-button
-		(click)="onBackClick()">
+		(click)="onBackClick()"
+	>
 		Back
 	</button>
 	<button
@@ -109,7 +123,8 @@
 		mat-flat-button
 		color="primary"
 		[disabled]="form.invalid"
-		(click)="onSubmit()">
+		(click)="onSubmit()"
+	>
 		Create
 	</button>
 </mat-dialog-actions>
