--- a/frontend/src/app/teams/submodules/meetings/components/views/meetings-calendar-view/meetings-calendar-view.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/views/meetings-calendar-view/meetings-calendar-view.component.html
@@ -3,6 +3,7 @@
 		[viewDate]="viewDate"
 		[events]="displayMeetings"
 		[refresh]="refresh"
-		(eventClicked)="onSelectMeeting($event.event)">
+		(eventClicked)="onSelectMeeting($event.event)"
+	>
 	</mwl-calendar-week-view>
 </div>
