--- a/frontend/src/app/teams/submodules/posts/components/posts-toolbar/posts-toolbar.component.html
+++ b/frontend/src/app/teams/submodules/posts/components/posts-toolbar/posts-toolbar.component.html
@@ -8,14 +8,16 @@
 			variant="outline"
 			icon="favorite_border"
 			class="posts__toolbar-item favourites"
-			routerLink="favourites">
+			routerLink="favourites"
+		>
 			<p>Favourites</p>
 		</app-button>
 
 		<app-button
 			class="posts__toolbar-item"
 			(click)="onWriteClick($event)"
-			icon="edit">
+			icon="edit"
+		>
 			<p>Write</p>
 		</app-button>
 	</div>
