--- a/frontend/src/app/teams/submodules/posts/components/views/posts-list-view/components/post-item/post-item.component.html
+++ b/frontend/src/app/teams/submodules/posts/components/views/posts-list-view/components/post-item/post-item.component.html
@@ -3,7 +3,8 @@
 		<img
 			src=""
 			alt="Alon Abadi"
-			class="post__header-img" />
+			class="post__header-img"
+		/>
 		<p class="post__header-author">{{ post.authorFullName }}</p>
 		<p class="post__header-date">
 			{{ post.createdDate | date: 'mediumDate' }}
@@ -12,13 +13,15 @@
 
 	<h4
 		class="post__title"
-		[routerLink]="[post.id]">
+		[routerLink]="[post.id]"
+	>
 		{{ post.title }}
 	</h4>
 
 	<p
 		class="post__description"
-		[routerLink]="[post.id]">
+		[routerLink]="[post.id]"
+	>
 		{{ post.description }}
 	</p>
 </div>
