--- a/frontend/src/app/teams/submodules/tasks/components/dialogs/customize-dialog/customize-dialog.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/dialogs/customize-dialog/customize-dialog.component.html
@@ -1,20 +1,23 @@
 <h4
 	class="sc__title"
-	mat-dialog-title>
+	mat-dialog-title
+>
 	Customize statuses
 </h4>
 
 <section
 	class="sc"
 	mat-dialog-content
-	*ngIf="!invalid">
+	*ngIf="!invalid"
+>
 	<div class="sc__open">
 		<h5>Open Status</h5>
 
 		<app-customize-status-item
 			*ngIf="openStatus"
 			[status]="openStatus"
-			[draggable]="false"></app-customize-status-item>
+			[draggable]="false"
+		></app-customize-status-item>
 	</div>
 
 	<div class="sc__statuses">
@@ -23,14 +26,16 @@
 			<div
 				cdkDropList
 				class="sc__list"
-				(cdkDropListDropped)="drop($event)">
+				(cdkDropListDropped)="drop($event)"
+			>
 				<app-customize-status-item
 					*ngFor="let status of statuses"
 					[status]="status"
 					[draggable]="true"
 					(statusDelete)="onDeleteStatus($event)"
 					(statusChange)="onChangeStatus($event)"
-					[showMoreButton]="true"></app-customize-status-item>
+					[showMoreButton]="true"
+				></app-customize-status-item>
 			</div>
 		</ng-container>
 
@@ -40,7 +45,8 @@
 	<div class="sc__add-status">
 		<button
 			mat-stroked-button
-			(click)="onAddStatusClick()">
+			(click)="onAddStatusClick()"
+		>
 			+ Add status
 		</button>
 	</div>
@@ -51,23 +57,27 @@
 		<app-customize-status-item
 			*ngIf="doneStatus"
 			[status]="doneStatus"
-			[draggable]="false"></app-customize-status-item>
+			[draggable]="false"
+		></app-customize-status-item>
 	</div>
 </section>
 
 <mat-dialog-actions
 	align="end"
-	*ngIf="!invalid">
+	*ngIf="!invalid"
+>
 	<button
 		mat-stroked-button
-		(click)="onBackClick()">
+		(click)="onBackClick()"
+	>
 		Back
 	</button>
 	<button
 		type="submit"
 		mat-flat-button
 		color="primary"
-		(click)="onSubmit()">
+		(click)="onSubmit()"
+	>
 		Save
 	</button>
 </mat-dialog-actions>
