--- a/frontend/src/app/teams/submodules/tasks/components/task-details-sidebar/task-details-sidebar.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/task-details-sidebar/task-details-sidebar.component.html
@@ -39,12 +39,14 @@
 			<p class="sidebar__details-item-label">End date:</p>
 			<p
 				class="sidebar__details-item-value"
-				*ngIf="task.endDate">
+				*ngIf="task.endDate"
+			>
 				{{ task.endDate | date: 'MMM d, y,' }}
 			</p>
 			<p
 				class="sidebar__details-item-value"
-				*ngIf="!task.endDate">
+				*ngIf="!task.endDate"
+			>
 				Unset
 			</p>
 		</div>
@@ -52,7 +54,8 @@
 
 	<button
 		mat-stroked-button
-		class="sidebar__attached">
+		class="sidebar__attached"
+	>
 		Attached files
 	</button>
 </aside>
