--- a/frontend/src/app/teams/submodules/tasks/components/task-notes/task-note-item/task-note-item.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/task-notes/task-note-item/task-note-item.component.html
@@ -13,10 +13,12 @@
 
 	<div
 		class="task__notes-item-actions"
-		*ngIf="isEditable">
+		*ngIf="isEditable"
+	>
 		<mat-icon
 			matTooltip="Delete"
-			(click)="deleteNote(note.id)">
+			(click)="deleteNote(note.id)"
+		>
 			delete
 		</mat-icon>
 	</div>
