--- a/frontend/src/app/teams/submodules/tasks/components/tasks-toolbar/tasks-toolbar.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/tasks-toolbar/tasks-toolbar.component.html
@@ -8,21 +8,24 @@
 			variant="outline"
 			class="tasks__toolbar-item"
 			icon="settings"
-			(click)="onCustomizeClick()">
+			(click)="onCustomizeClick()"
+		>
 			<p>Customize</p>
 		</app-button>
 
 		<app-button
 			variant="outline"
 			class="tasks__toolbar-item"
-			icon="share">
+			icon="share"
+		>
 			<p>Share</p>
 		</app-button>
 
 		<app-button
 			class="tasks__toolbar-item"
 			(click)="onAddNewClick($event)"
-			icon="add">
+			icon="add"
+		>
 			<p>Add</p>
 		</app-button>
 	</div>
