--- a/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-column/kanban-column.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-column/kanban-column.component.html
@@ -1,9 +1,11 @@
 <div
 	class="column"
-	*ngIf="column">
+	*ngIf="column"
+>
 	<div
 		class="column__header"
-		[ngStyle]="{ 'border-bottom': getColumnBorderBottomStyle }">
+		[ngStyle]="{ 'border-bottom': getColumnBorderBottomStyle }"
+	>
 		<h4 class="column__header-title">
 			{{ column.name }} ({{ getColumnTasksCount }})
 		</h4>
@@ -22,9 +24,11 @@
 		[id]="getColumnStringId"
 		[cdkDropListConnectedTo]="connectedColumns"
 		[cdkDropListData]="column.tasks"
-		(cdkDropListDropped)="onDrop($event)">
+		(cdkDropListDropped)="onDrop($event)"
+	>
 		<app-kanban-item
 			*ngFor="let task of column.tasks"
-			[task]="task"></app-kanban-item>
+			[task]="task"
+		></app-kanban-item>
 	</div>
 </div>
