--- a/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/kanban-board.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/kanban-board.component.html
@@ -3,6 +3,7 @@
 		<app-kanban-column
 			*ngFor="let column of columns"
 			[column]="column"
-			[connectedColumns]="connectedColumns"></app-kanban-column>
+			[connectedColumns]="connectedColumns"
+		></app-kanban-column>
 	</div>
 </div>
