--- a/frontend/src/app/teams/submodules/tasks/components/views/list-view/list-view.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/views/list-view/list-view.component.html
@@ -1,7 +1,9 @@
 <mat-accordion
 	class="list"
-	multi="true">
+	multi="true"
+>
 	<app-list-panel
 		*ngFor="let column of columns; let i = index"
-		[column]="column"></app-list-panel>
+		[column]="column"
+	></app-list-panel>
 </mat-accordion>
